--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <head>   
     <body>
 <div class="header">
-    <h1>Sveiki i pakirniu Stovyklaviete</h1>
+    <h1>Apie</h1>
     </body>
     <div class="button-container">
       <a href="index.html">
@@ -24,6 +24,9 @@
       <a href="contacts.html">
       <button>Kontaktai</button>
       </a>
+    </div>
+    <div class="content">
+  
     </div>
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
   <div class="footer">
