--- a/services.html
+++ b/services.html
@@ -6,8 +6,9 @@
   <head>   
     <body>
 <div class="header">
-    <h1>Sveiki i pakirniu Stovyklaviete</h1>
-    </body>
+    <h1>Paslaugos</h1>
+    
+  </body>
     <div class="button-container">
       <a href="index.html">
       <button>Pagrindinis puslapis</button>
@@ -24,6 +25,9 @@
       <a href="contacts.html">
       <button>Kontaktai</button>
       </a>
+    </div>
+    <div class="content">
+  
     </div>
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
   <div class="footer">
