--- a/contacts.html
+++ b/contacts.html
@@ -1,37 +1,44 @@
 <html>
   <meta charset="UTF-8">
-  <title>Pakirniu Stovyklaveiete - Stovyklaviete prie Asvejos Ezero </title>
+  <title>Pakirniu Stovyklaveiete - Stovyklaviete prie Asvejos Ezero</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
   <head>   
-    <body>
-<div class="header">
-    <h1>Sveiki i pakirniu Stovyklaviete</h1>
-    </body>
+  </head>
+  <body>
+    <div class="header">
+      <h1>Kontaktai</h1>
+    </div>
+
+
     <div class="button-container">
       <a href="index.html">
-      <button>Pagrindinis puslapis</button>
+        <button>Pagrindinis puslapis</button>
       </a>
       <a href="buy.html">
-      <button>Nuomokis vieta</button>
+        <button>Nuomokis vieta</button>
       </a>
       <a href="about.html">
-      <button>Apie mus</button>
+        <button>Apie mus</button>
       </a>
       <a href="services.html">
-      <button>Paslaugos</button>
+        <button>Paslaugos</button>
       </a>
       <a href="contacts.html">
-      <button>Kontaktai</button>
+        <button>Kontaktai</button>
       </a>
     </div>
-  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
-  <div class="footer">
-  <footer>
-    <p>© 2024 <strong>Jurgis Rizgelis ir Mantas Rizgelis</strong>. Ši svetainė yra licencijuota pagal
-        <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a>.
-    </p>
+<div class="content">
+  
   </div>
-</footer>
-</head>
-  </html>
+
+    <div class="footer">
+      <footer>
+        <p>© 2024 <strong>Jurgis Rizgelis ir Mantas Rizgelis</strong>. Ši svetainė yra licencijuota pagal
+          <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a>.
+        </p>
+      </footer>
+    </div>
+  </body>
+</html>
