--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
+<!DOCTYPE html>
 <html>
-  <meta charset="UTF-8">
+<meta charset="UTF-8">
   <title>Pakirniu Stovyklaveiete - Stovyklaviete prie Asvejos Ezero </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 <link rel="stylesheet" href="style.css">
