Edit google translate and lang install

--- a/about.html
+++ b/about.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
+<html lang="lt"></html>
 <html>
+  <head>
 <meta charset="UTF-8">
   <title>Pakirniu Stovyklaveiete - Stovyklaviete prie Asvejos Ezero </title>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'lt',
+        includedLanguages: 'en,lt,fr,de,es',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      }, 'google_translate_element');
+    }
+  </script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 <link rel="stylesheet" href="style.css">
   <head>   
     <body>
 <div class="header">
     <h1>Apie</h1>
+    <div id="google_translate_element"></div>
     </body>
     <div class="button-container">
       <a href="index.html">
