--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
+<html lang="lt"></html>
 <html>
+  <head>
   <meta charset="UTF-8">
   <title>Pakirniu Stovyklaveiete - Stovyklaviete prie Asvejos Ezero</title>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'lt',
+        includedLanguages: 'en,lt,fr,de,es',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      }, 'google_translate_element');
+    }
+  </script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
@@ -10,6 +23,7 @@
   <body>
     <div class="header">
       <h1>Kontaktai</h1>
+      <div id="google_translate_element"></div>
     </div>
 
 
