edited warnings added

--- a/about.html
+++ b/about.html
@@ -41,13 +41,13 @@
       </a>
     </div>
     <div class="content">
-  
+  Mes esame Prie Asvejo ezero Pakirniu kaimas 1B 
     </div>
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
   <div class="footer">
   <footer>
     <p>© 2024 <strong>Jurgis Rizgelis ir Mantas Rizgelis</strong>. Ši svetainė yra licencijuota pagal
-        <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a>.
+        <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a> DEMESIO!!! : Svetaine nera uzbaigta
     </p>
   </div>
 </footer>
