--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="footer">
   <footer>
     <p>© 2024 <strong>Jurgis Rizgelis ir Mantas Rizgelis</strong>. Ši svetainė yra licencijuota pagal
-        <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a>.
+        <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a>DEMESIO!!! : Svetaine nera uzbaigta
     </p>
   </div>
 </footer>
