Better index.html

--- a/index.html
+++ b/index.html
@@ -1,52 +1,50 @@
 <!DOCTYPE html>
-<html lang="lt"></html>
-<html>
-  <head>
-  <meta charset="UTF-8">
-  <title>Pakirniu Stovyklaveiete - Stovyklaviete prie Asvejos Ezero </title>
-  <script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({
-        pageLanguage: 'lt',
-        includedLanguages: 'en,lt,fr,de,es',
-        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-      }, 'google_translate_element');
-    }
-  </script>
-  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<html lang="lt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pakirnių Stovyklavietė - Stovyklavietė prie Asvejos ežero su nuostabiais vaizdais ir moderniais patogumais.">
+    <meta name="keywords" content="stovyklavietė, Asvejos ežeras, kempingas, poilsis, gamta">
+    <meta name="author" content="Jurgis Rizgelis, Mantas Rizgelis">
+    <title>Pakirnių Stovyklavietė - Poilsis prie Asvejos ežero</title>
+
+    <!-- Google Translate -->
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'lt',
+                includedLanguages: 'en,lt,fr,de,es',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+            }, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css">
 </head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-<link rel="stylesheet" href="style.css">
-  <head>   
-    <body>
-<div class="header">
-    <h1>Sveiki i pakirniu Stovyklaviete</h1>
-    <div id="google_translate_element"></div>
-    </body>
-    <div class="button-container">
-      <a href="index.html">
-      <button>Pagrindinis puslapis</button>
-      </a>
-      <a href="buy.html">
-      <button>Nuomokis vieta</button>
-      </a>
-      <a href="about.html">
-      <button>Apie mus</button>
-      </a>
-      <a href="services.html">
-      <button>Paslaugos</button>
-      </a>
-      <a href="contacts.html">
-      <button>Kontaktai</button>
-      </a>
-    </div>
-  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
-  <div class="footer">
-  <footer>
-    <p>© 2024 <strong>Jurgis Rizgelis ir Mantas Rizgelis</strong>. Ši svetainė yra licencijuota pagal
-        <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a>DEMESIO!!! : Svetaine nera uzbaigta
-    </p>
-  </div>
-</footer>
-</head>
-  </html>
+<body>
+    <header class="header">
+        <h1>Sveiki atvykę į Pakirnių Stovyklavietę</h1>
+        <div id="google_translate_element"></div>
+    </header>
+
+    <nav class="button-container">
+        <a href="index.html"><button>Pagrindinis puslapis</button></a>
+        <a href="buy.html"><button>Nuomokis vietą</button></a>
+        <a href="about.html"><button>Apie mus</button></a>
+        <a href="services.html"><button>Paslaugos</button></a>
+        <a href="contacts.html"><button>Kontaktai</button></a>
+    </nav>
+
+    <footer class="footer">
+        <p>© 2024 <strong>Jurgis Rizgelis ir Mantas Rizgelis</strong>. Ši svetainė yra licencijuota pagal 
+            <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a>.
+        </p>
+        <p><strong>Dėmesio!</strong> Svetainė dar nėra pilnai užbaigta.</p>
+    </footer>
+</body>
+</html>
