--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
         </p>
         <p><strong>Dėmesio!</strong> Svetainė dar nėra pilnai užbaigta.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
