Last name Letters delted only first puted

--- a/contacts.html
+++ b/contacts.html
@@ -50,7 +50,7 @@
 
     <div class="footer">
       <footer>
-        <p>© 2024 <strong>Jurgis Rizgelis ir Mantas Rizgelis</strong>. Ši svetainė yra licencijuota pagal
+        <p>© 2024 <strong>Jurgis R ir Mantas R</strong>. Ši svetainė yra licencijuota pagal
           <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a>DEMESIO!!! : Svetaine nera uzbaigta
         </p>
       </footer>
