--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
 
     <footer class="footer">
-        <p>© 2024 <strong>Jurgis Rizgelis ir Mantas Rizgelis</strong>. Ši svetainė yra licencijuota pagal 
+        <p>© 2024 <strong>Jurgis R ir Mantas R</strong>. Ši svetainė yra licencijuota pagal 
             <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a>.
         </p>
         <p><strong>Dėmesio!</strong> Svetainė dar nėra pilnai užbaigta.</p>
