--- a/buy.html
+++ b/buy.html
@@ -46,7 +46,7 @@
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
   <div class="footer">
   <footer>
-    <p>© 2024 <strong>Jurgis Rizgelis ir Mantas Rizgelis</strong>. Ši svetainė yra licencijuota pagal
+    <p>© 2024 <strong>Jurgis R ir Mantas R</strong>. Ši svetainė yra licencijuota pagal
         <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a>DEMESIO!!! : Svetaine nera uzbaigta
     </p>
   </div>
