--- a/contacts.html
+++ b/contacts.html
@@ -4,16 +4,7 @@
   <head>
   <meta charset="UTF-8">
   <title>Pakirniu Stovyklaveiete - Stovyklaviete prie Asvejos Ezero</title>
-  <script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({
-        pageLanguage: 'lt',
-        includedLanguages: 'en,lt,fr,de,es',
-        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-      }, 'google_translate_element');
-    }
-  </script>
-  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+ 
 </head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link rel="stylesheet" href="style.css">
@@ -44,10 +35,12 @@
         <button>Kontaktai</button>
       </a>
     </div>
-<div class="content">
+    <main>
+      <section class="content">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quod suscipit amet possimus delectus hic voluptatem cum omnis molestiae mollitia sint voluptate soluta aperiam, minus reprehenderit sed maxime! Pariatur, quo!</p>
+      </section>
+  </main>
   
-  </div>
-
     <div class="footer">
       <footer>
         <p>© 2024 <strong>Jurgis R ir Mantas R</strong>. Ši svetainė yra licencijuota pagal
