--- a/index.html
+++ b/index.html
@@ -8,17 +8,6 @@
     <meta name="author" content="Jurgis Rizgelis, Mantas Rizgelis">
     <title>Pakirnių Stovyklavietė - Poilsis prie Asvejos ežero</title>
 
-    <!-- Google Translate -->
-    <script type="text/javascript">
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-                pageLanguage: 'lt',
-                includedLanguages: 'en,lt,fr,de,es',
-                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-            }, 'google_translate_element');
-        }
-    </script>
-    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
@@ -39,7 +28,14 @@
         <a href="services.html"><button>Paslaugos</button></a>
         <a href="contacts.html"><button>Kontaktai</button></a>
     </nav>
-
+    <main>
+        <section class="content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum illum facere est sapiente voluptates fugiat dolor quaerat atque aperiam minus harum nemo dolorem aspernatur nesciunt delectus, quod quam sunt repellendus.
+                
+            </p>
+        </section>
+    </main>
+    
     <footer class="footer">
         <p>© 2024 <strong>Jurgis R ir Mantas R</strong>. Ši svetainė yra licencijuota pagal 
             <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL 3.0</a>.
