--- a/buy.html
+++ b/buy.html
@@ -4,16 +4,7 @@
   <head>
   <meta charset="UTF-8">
   <title>Pakirniu Stovyklaveiete - Stovyklaviete prie Asvejos Ezero </title>
-  <script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({
-        pageLanguage: 'lt',
-        includedLanguages: 'en,lt,fr,de,es',
-        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-      }, 'google_translate_element');
-    }
-  </script>
-  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 <link rel="stylesheet" href="style.css">
@@ -40,9 +31,12 @@
       <button>Kontaktai</button>
       </a>
     </div>
-    <div class="content">
+    <main>
+      <section class="content">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid ipsum vel eveniet quisquam adipisci quis reprehenderit ea. Porro ad sunt dignissimos adipisci. Eos, recusandae facilis. Nihil quas amet deserunt beatae?</p>
+      </section>
+  </main>
   
-    </div>
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
   <div class="footer">
   <footer>
