--- a/services.html
+++ b/services.html
@@ -4,16 +4,6 @@
  <head>
   <meta charset="UTF-8">
   <title>Pakirniu Stovyklaveiete - Stovyklaviete prie Asvejos Ezero </title>
-  <script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({
-        pageLanguage: 'lt',
-        includedLanguages: 'en,lt,fr,de,es',
-        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-      }, 'google_translate_element');
-    }
-  </script>
-  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 <link rel="stylesheet" href="style.css">
@@ -40,9 +30,12 @@
       <button>Kontaktai</button>
       </a>
     </div>
-    <div class="content">
+    <main>
+      <section class="content">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam iste id quas aliquid molestiae repudiandae velit, porro soluta at, pariatur libero similique cumque itaque consectetur nostrum recusandae, ducimus iusto perspiciatis?</p>
+      </section>
+  </main>
   
-    </div>
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
   <div class="footer">
   <footer>
