--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
