Lorem insatlled styles edited

--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <header>
         <div class="header-container">
-            <h1>Pagrindinis puslapis</h1>
+            <h1>Pagrindinis</h1>
             <div id="google_translate_element"></div>
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="index.html">Pagrindinis puslapis</a></li>
+                <li><a href="index.html">Pagrindinis</a></li>
                 <li><a href="buy.html">Nuomokis vietą</a></li>
                 <li><a href="about.html">Apie mus</a></li>
                 <li><a href="services.html">Paslaugos</a></li>
@@ -33,7 +32,7 @@
     
     <main>
         <section class="content">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea quas quaerat amet maiores. Ullam nulla, nostrum fuga similique placeat nihil sunt quaerat odit ipsam impedit porro velit consequatur soluta? Optio?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam magni sint, consectetur iste quisquam eius ea corporis laboriosam ipsa recusandae maxime sequi quae illo provident earum, officiis consequatur beatae doloremque.</p>
         </section>
     </main>
     
