--- a/buy.html
+++ b/buy.html
@@ -32,7 +32,7 @@
     
     <main>
         <section class="content">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio corrupti aut repellat doloribus nam quis ipsa et saepe labore dicta maxime nobis cupiditate, impedit odit enim necessitatibus praesentium eaque corporis!</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur numquam sit reiciendis illo enim harum cumque nihil sint vitae iste labore recusandae, quaerat tempore eos minus ex laboriosam doloribus tenetur?</p>
         </section>
     </main>
     
