--- a/contacts.html
+++ b/contacts.html
@@ -32,7 +32,7 @@
     
     <main>
         <section class="content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum magni labore, possimus, nam animi error blanditiis reprehenderit, inventore nihil libero ut! Corrupti nisi, eaque id est quasi reiciendis nulla tenetur.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur numquam sit reiciendis illo enim harum cumque nihil sint vitae iste labore recusandae, quaerat tempore eos minus ex laboriosam doloribus tenetur?</p>
         </section>
     </main>
     
