--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="header-container">
-            <h1>Pagrindinis</h1>
+            <h1>Pagrindinis Puslapis</h1>
             <div id="google_translate_element"></div>
         </div>
         <nav>
@@ -32,7 +32,7 @@
     
     <main>
         <section class="content">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam magni sint, consectetur iste quisquam eius ea corporis laboriosam ipsa recusandae maxime sequi quae illo provident earum, officiis consequatur beatae doloremque.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur numquam sit reiciendis illo enim harum cumque nihil sint vitae iste labore recusandae, quaerat tempore eos minus ex laboriosam doloribus tenetur?</p>
         </section>
     </main>
     
