--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
     
     <main>
         <section class="content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni itaque minima iusto et tenetur. Sit beatae nesciunt ex distinctio sed officia laborum, deleniti id, quo sapiente ad nam, mollitia eos.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur numquam sit reiciendis illo enim harum cumque nihil sint vitae iste labore recusandae, quaerat tempore eos minus ex laboriosam doloribus tenetur?</p>
         </section>
     </main>
     
