--- a/about.html
+++ b/about.html
@@ -31,7 +31,9 @@
     
     <main>
         <section class="content">
+            <div class="content">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur numquam sit reiciendis illo enim harum cumque nihil sint vitae iste labore recusandae, quaerat tempore eos minus ex laboriosam doloribus tenetur?</p>
+        </div>
         </section>
     </main>
     
