--- a/about.html
+++ b/about.html
@@ -43,6 +43,6 @@
     </footer>
     
     <!-- JavaScript -->
-    <script src="script.js" type="text/javascript"></script>
+    <script src="script.js"></script>
 </body>
 </html>
