--- a/services.html
+++ b/services.html
@@ -45,6 +45,6 @@
     </footer>
     
     <!-- JavaScript -->
-    <script src="script.js" type="text/javascript"></script>
+    <script src="script.js"></script>
 </body>
 </html>
